--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Chuck Joke Generator</title>
   </head>
   <body>
+    <div class="container">
+      <h3>Chuck Norris Jokes</h3>
+      <div id="joke" class="joke">Loading...</div>
+      <button id="joke-btn" class="btn">Get Another Joke</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
